--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">CheckExc</string>
     <string name="success_mess">Login Success</string>
     <string name="unseccess_mess">Please try again</string>
-    <string name="user_name">jdoe</string>
+    <string name="user_name">JDOE</string>
     <string name="password">welcome1</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="new_customer">New Customer</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -18,4 +19,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
